added some twitter sso basics

--- a/.env.example
+++ b/.env.example
@@ -63,3 +63,7 @@ GOOGLE_OAUTH2_CLIENT_SECRET=
 # Github SSO
 GITHUB_OAUTH2_CLIENT_ID=
 GITHUB_OAUTH2_CLIENT_SECRET=
+
+# Twitter SSO
+TWITTER_CLIENT_ID=
+TWITTER_CLIENT_SECRET=
